--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
       {% else %}
       <a href="/users/{{ session.user_id }}" class="navbar-brand">MyPantry</a>
       <li class="nav-item">
-        <a href="#" class = "nav-link">About</a>
+        <a href="/about" class = "nav-link">About</a>
       </li>
       <li class="nav-item">
         <a href="/recipes" class = "nav-link">Recipes</a>
