--- a/templates/recipeform.html
+++ b/templates/recipeform.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
 
-
+<body>
     
     <div class="card text-center">
       <div class="jumbotron jumbotron-fluid">
@@ -74,7 +74,7 @@
 
 
     
-
+    </body>
 
   <script type="text/javascript" src="../static/ingredientquantity.js"></script>
 
