--- a/templates/about.html
+++ b/templates/about.html
@@ -1,17 +1,22 @@
 {% extends 'base.html' %} 
-{% block title %}{% endblock %} 
+{% block title %}About Me{% endblock %} 
 
 {% block body %}
 
+<div class = "container container-fluid">
+  <div class = "row">
+    <div class = "col-12 col-md-8">
 
-<div class="jumbotron">
-    <h1 class="display-4">Maha Fatima Rizvi</h1>
-    <p class="lead">Capstone Project; Hackbright Academy Fellowship program 2022.</p>
-    <hr class="my-4">
-    <p>My Pantry curates recipes based on the ingredients you have available on hand </p>
-    <p>Contact me: mahafatima14@gmail.com</p>
-  </div
-
+      <h1 class="display-4">Maha Fatima Rizvi</h1>
+      <h3 class="lead"> Hackbright Academy Fellowship program 2022.</h3>
+     
+     
+    </div>
+  </div>
+  <div class =  "col-md-4"></div>
+    <img id="mypicture" src="/static/img/contactcard.jpg">
+  </div>
+  </div>
 
 
       
